--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mondora-labs/qoodle.git"
+    "url": "git+https://github.com/Giuny/Giuny.github.io.git"
   },
   "author": "mondora",
   "license": "MIT",
