--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "gulp dev",
-    "deploy": "npm run dev&&gh-pages -d dev"
+    "deploy": "npm run dev&&gh-pages -d dev",
+    "mock": "sd-mock-server --delay 10 --require babel-register --watch"
   },
   "repository": {
     "type": "git",
@@ -18,15 +19,12 @@
     "jsdom": "^11.1.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.0",
-    "react-bootstrap-table": "^3.3.4",
     "react-cntdwn": "^0.3.0",
-    "react-datepicker": "^0.47.0",
     "react-dom": "^15.5.4",
     "react-infinite-calendar": "^2.3.1",
-    "react-router": "^3.0.2",
-    "react-timer-mixin": "^0.13.3"
+    "react-router": "^3.0.5",
+    "sd-mock-server": "^1.3.0"
   },
   "devDependencies": {
     "babel-cli": "~6.9.0",
@@ -48,7 +46,6 @@
     "gulp": "~3.9.1",
     "gulp-concat": "~2.6.0",
     "gulp-cssnano": "~2.1.2",
-    "gulp-deploy-azure-cdn": "~2.0.0",
     "gulp-eslint": "~2.0.0",
     "gulp-if": "~2.0.1",
     "gulp-load-plugins": "~1.2.4",
