--- a/package.json
+++ b/package.json
@@ -1,72 +1,40 @@
 {
-  "name": "qoodle-project",
-  "version": "0.0.1",
-  "description": "count something",
-  "main": "index.html",
-  "scripts": {
-    "dev": "gulp dev",
-    "deploy": "npm run dev&&gh-pages -d dev"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mondora/qoodle-project.git"
-  },
-  "author": "mondora",
-  "license": "MIT",
+  "name": "qoodle-fe",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "~0.12.0",
-    "react": "~15.1.0",
-    "react-dom": "~15.1.0",
-    "react-dropzone": "~3.9.2 ",
-    "react-motion": "~0.4.7",
-    "react-redux": "~4.4.5",
-    "react-router": "^2.7.0",
-    "redux": "~3.5.2",
-    "redux-logger": "~2.6.1",
-    "redux-storage": "~4.0.0",
-    "redux-storage-decorator-filter": "~1.1.4",
-    "redux-storage-engine-localstorage": "~1.1.0",
-    "redux-thunk": "~2.1.0",
-    "sha256": "~0.2.0"
+    "bootstrap": "^3.3.7",
+    "history": "^3.3.0",
+    "jsdom": "^11.1.0",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
+    "react-cntdwn": "^0.3.0",
+    "react-dom": "^15.5.4",
+    "react-infinite-calendar": "^2.3.1",
+    "react-router": "^3.0.5",
+    "react-scripts": "0.9.5",
+    "sd-mock-server": "^1.3.0"
   },
   "devDependencies": {
-    "babel-cli": "~6.9.0",
-    "babel-core": "~6.9.0",
-    "babel-eslint": "~6.0.4",
-    "babel-loader": "~6.2.4",
-    "babel-preset-es2015": "~6.9.0",
-    "babel-preset-react": "~6.5.0",
-    "babel-preset-stage-0": "~6.5.0",
-    "babel-register": "^6.9.0",
     "bluebird": "~3.4.0",
     "browser-sync": "~2.12.8",
+    "chai": "^3.5.0",
     "dotenv": "~2.0.0",
+    "enzyme": "^2.9.1",
     "eslint": "~2.10.2",
-    "eslint-plugin-babel": "~3.2.0",
     "gh-pages": "^0.12.0",
-    "gulp": "~3.9.1",
-    "gulp-concat": "~2.6.0",
-    "gulp-cssnano": "~2.1.2",
-    "gulp-deploy-azure-cdn": "~2.0.0",
-    "gulp-eslint": "~2.0.0",
-    "gulp-if": "~2.0.1",
-    "gulp-load-plugins": "~1.2.4",
-    "gulp-preprocess": "~2.0.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-spawn-mocha": "~2.2.2",
-    "gulp-util": "~3.0.7",
     "mocha": "~2.5.3",
-    "pro-gulp": "~0.3.0",
+    "mocha-jsdom": "^1.1.0",
+    "react-addons-test-utils": "^15.5.1",
+    "sinon": "^2.2.0",
+    "sinon-chai": "^2.10.0",
     "webpack": "~1.13.1"
   },
-  "bugs": {
-    "url": "https://github.com/mondora-labs/qoodle/issues"
-  },
-  "homepage": "https://mondora.github.io/qoodle-project",
-  "directories": {
-    "test": "test"
-  },
-  "keywords": [
-    "qoodle"
-  ]
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
