--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-infinite-calendar": "^2.3.1",
     "react-router": "^3.0.5",
     "react-scripts": "0.9.5",
-    "sd-mock-server": "^1.3.0"
+    "sd-mock-server": "^1.3.0",
+    "typeface-muli": "0.0.35"
   },
   "devDependencies": {
     "bluebird": "~3.4.0",
