--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^0.31.0",
     "react-cntdwn": "^0.3.0",
     "react-dom": "^15.5.4",
+    "react-google-login": "^2.9.3",
     "react-infinite-calendar": "^2.3.1",
     "react-router": "^3.0.5",
     "react-scripts": "0.9.5",
