--- a/package.json
+++ b/package.json
@@ -4,6 +4,17 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "d3": "^4.10.2",
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-brush": "^1.0.4",
+    "d3-geo": "^1.7.1",
+    "d3-scale": "^1.0.6",
+    "d3-selection": "^1.1.0",
+    "d3-shape": "^1.2.0",
+    "d3-svg": "^0.2.2",
+    "d3-svg-legend": "^2.24.1",
+    "d3-transition": "^1.1.0",
     "history": "^3.3.0",
     "jsdom": "^11.1.0",
     "prop-types": "^15.5.8",
@@ -15,7 +26,9 @@
     "react-infinite-calendar": "^2.3.1",
     "react-router": "^3.0.5",
     "react-scripts": "0.9.5",
+    "react-svg-piechart": "^1.3.0",
     "sd-mock-server": "^1.3.0",
+    "selection": "0.0.1",
     "typeface-muli": "0.0.35"
   },
   "devDependencies": {
