--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "webpack": "~1.13.1"
   },
   "scripts": {
-    "start": "PORT=80 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
